# 381706-2_Lab2_Myshkin

./: .travis.yml  381706-2_Lab_Myshkin.sln  ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Reports/: Отчет по Лабораторной работе. Матрица.docx  Отчет по Лабораторной работе. Мультистек.docx  Отчет по Лабораторной работе. Очередь..docx  Отчет по Лабораторной работе. Полином.docx  Отчет по Лабораторной работе. Просмотровые таблицы.docx  Отчет по Лабораторной работе. Список на массиве.docx  Отчет по Лабораторной работе. Список.docx  Отчет по Лабораторной работе. Стек на списке.docx  Отчет по лабораторной работе. Обратная польская запись.docx  Отчет по лабораторной работе. Стек..docx
arrlist/: main.cpp
arrlistlib/: TArrList.cpp  TArrList.h
datlink/: TDatLink.h
datlist/: main.cpp
datlistlib/: TDatList.cpp  TDatList.h
hashtable/: main.cpp
hashtablelib/: THashTable.h  TListHash.h
infixtopolish/: main.cpp
infixtopolishlib/: InfixToPolish.cpp  InfixToPolish.h
infixtopolishtest/: infixtopolish_tests.cpp
liststack/: main.cpp
liststacklib/: TListStack.cpp  TListStack.h
liststacktest/: liststack_tests.cpp
matrixlib/: TMatrix.h
matrixtest/: matrix_tests.cpp
multistack/: main.cpp
multistacklib/: MStack.h  TMultiStack.cpp  TMultiStack.h
multistacktest/: multistack_tests.cpp
plex/: main.cpp
plexlib/: TLineGragh.cpp  TLineGragh.h  TPlexGragh.cpp  TPlexGragh.h  TPointGragh.cpp  TPointGragh.h
plextest/: linegragh_tests.cpp  plexgragh_tests.cpp  pointgragh_tests.cpp
polynomial/: CMakeLists.txt  main.cpp
polynomiallib/: CMakeLists.txt  TMonomial.cpp  TMonomial.h  TPolinomial.cpp  TPolinomial.h
polynomialtest/: CMakeLists.txt  polynomial_tests.cpp
queue/: main.cpp
queuelib/: TQueue.h
sorttable/: main.cpp
sorttablelib/: TSortTable.h
stack/: main.cpp
stacklib/: TStack.h
table/: CMakeLists.txt  main.cpp
tablelib/: TKey.cpp  TKey.h  TScanTable.h  TTabRecord.h
texttree/: main.cpp
texttreelib/: TText.cpp  TText.h  TTextLink.cpp  TTextLink.h
texttreetest/: textlink_tests.cpp  texttree_tests.cpp
treetable/: main.cpp
treetablelib/: TTreeNode.h  TTreeTable.h
vector/: CMakeLists.txt  cmake_install.cmake  main.cpp  vector.vcxproj  vector.vcxproj.filters
vectorlib/: TVector.h  cmake_install.cmake  main.cpp  vectorlib.vcxproj
